# CMakeTesting

./: CMakeLists.txt  main.cpp  sqr.cpp  sqr.h  sqr_test.cpp
